app/oligrapher.scss
@use "sass:color";

$oligrapher_blue: #0c7fff;
$font_color: black;
$link_color: $oligrapher_blue;
$button_bg_color: #2c63c8;
$button_font_color: white;
$header_menu_item_color: $font_color;
$header_menu_item_color_hover: $link_color;
$header_spacing_between_header: 10px;
$header_bottom_border_color: #6e89a1;
$header_save_button_bg_color: $button_bg_color;
$header_save_button_font_color: $button_font_color;
$header_discard_button_bg_color: #6e89a1;
$header_discard_button_font_color: white;

$oligrapher_dark_gray: #888;
$oligrapher_gray: #b3b3b3;
$oligrapher_font_gray: #b3b3b3;

$delete_red: #c82c63;
$toolbox_width: 250px;

$caption_backgound: lightgreen;
$caption_backgound_focused: lightcoral;

$node_highlight_color: $oligrapher_blue;
$edge_highlight_color: $oligrapher_blue;

@font-face {
  font-family: 'Helvetica Neue Medium';
  font-weight: normal;
  src: url(./fonts/HelveticaNeueLTStdMd.otf) format('opentype');
}

html, body, div#oligrapher {
  height: 100%;
}

body {
  margin: 0;
}

/*
   This is our outermost div.
   It's a flex container with two children: #oligrapher-header and #oligrapher-graph
*/
#oligrapher-container {
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-family: Helvetica, Arial, sans-serif;

  button, a:hover {
    cursor: pointer;
  }

  a {
    color: $link_color;
  }
}

#oligrapher-container #oligrapher-header, #oligrapher-container #oligrapher-header-condensed {
  display: flex;
  flex-direction: column;
  width: calc(100vw - 30px);
  margin: 0 auto;
  border-bottom: 1px solid #ccc;
  box-sizing: border-box;
  position: relative;

  &.oligrapher-header-expanded {
    min-height: 142px;
    height: 142px;
  }

  &.oligrapher-header-collapsed {
    height: 52px;

    #oligrapher-header-top {
      display: flex;
      flex-direction: row;
    }

    h1#oligrapher-title {
      margin-top: 7px;
      margin-bottom: 0;
      font-size: 30px;
      line-height: 40px;
      height: 30px;
    }
  }

  /* title and subtitle*/
  h1 {
    font-size: 42px;
    margin-top: 10px;
    margin-bottom: 5px;
    box-sizing: border-box;

    input {
      font-family: Helvetica, Arial, sans-serif;
      font-size: 42px;
      height: 48px;
      margin-left: -4px;
      max-width: 800px;
      width: 100%;
      border: 1px solid #ccc;
    }

    a {
      color: black;
      text-decoration: none;
      font-weight: normal;
    }
  }

  #oligrapher-header-subtitle-wrapper {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 18px;
    line-height: 24px;
    padding-top: 0px;
    padding-bottom: 10px;

    input {
      width: 100%;
      height: 24px;
      box-sizing: border-box;
      font-family: Helvetica, Arial, sans-serif;
      font-size: 18px;
      line-height: 24px;
      margin-left: -4px;
      border: 1px solid #ccc;
    }
  }

  #oligrapher-header-toggler {
    position: absolute;
    bottom: 0;
    left: 50%;
    margin-left: -10px;
    text-align: center;
    width: 20px;
    height: 14px;
    font-size: 13px;
    line-height: 12px;
    border: 1px solid #ccc;
    border-bottom: 0;
    cursor: pointer;
  }

  #oligrapher-header-bottom {
    display: flex;
    flex-direction: row;

    &:not(.editing) {
      margin-bottom: 0.5em;
    }

    #oligrapher-header-left-wrapper {
      flex-grow: 2;
      flex-shrink: 2;
      padding-right: 1.5em;

      #oligrapher-attribution {
        font-size: 0.9em;
        line-height: 1.2em;

        a {
          color: $link_color;
          text-decoration: none;

          &:hover {
            text-decoration: underline;
          }
        }
      }
    }

    #oligrapher-header-right-wrapper {
      flex-grow: 0;
      flex-shrink: 0;
      margin-right: 0.5em;
      margin-left: auto; /* This pushes the flex item to the right */
      align-self: flex-end;

      button {
        margin-right: 5px;
      }

      .oligrapher-header-actions, .oligrapher-header-edit-actions  {
        .oligrapher-header-edit-actions-lock {
          margin-right: 0.5em;
          color: $oligrapher_dark_gray;
        }

        .header-action-menu-wrapper {
          display: inline-block;
        }

        #toggle-action-menu:focus {
          outline: none;
        }
      }
    }
  }
}

%box_shadow {
  -webkit-box-shadow: 0px 0px 20px 2px #eee;
  -moz-box-shadow: 0px 0px 20px 2p #eee;
  box-shadow: 0px 0px 20px 2px rgba(128, 128, 128, 0.3);
}

#oligrapher-container .MuiGrid-container {
  flex: 1 2 auto;
  // overflow: hidden;
}

#oligrapher-container #oligrapher-graph-container {
  flex: 1 2 auto;
  overflow: hidden;
  position: relative;

  #oligrapher-graph-svg {
    z-index: 1;
    height: 95%;
  }

  .oligrapher-graph-editor {
    position: absolute;
    top: 0;
    left: 15px;

    z-index: 10;
    width: 100%;
    pointer-events: none;
    line-height: 1.2em;
  }

  .text-tool {
    cursor: text;
  }

  #oligrapher-zoomcontrol {
    div {
      z-index: 1;
      position: absolute;
        display: flex;
      flex-direction: column;
      border: 1px solid #ccc;
      @extend %box_shadow;
      right: 15px;
    }

    #oligrapher-zoom-buttons {
      top: 1em;
    }

    #oligrapher-zoom-reset-button {
      top: 5.5em;
    }

    button {
      padding: 8px;
      border: 0;
      background-color: white;
      height: 30px;
      width: 30px;
      border-bottom: 1px solid #eee;
      line-height: 1em;
      font-size: 1em;
      box-sizing: border-box;

      &:focus {
        outline: none;
      }

      &::-moz-focus-inner {
        border-style: none;
      }

      svg {
        height: 14px;
        width: 14px;
        vertical-align: baseline;
      }
    }
  }
}

/* EDITOR */

%editor_label {
  margin-bottom: 0.25em;
  color: $oligrapher_dark_gray;
  font-size: 14px;
  font-weight: bold;
}

%editor_input {
  font-size: 14px;
  line-height: 1em;
  height: 28px;
  border: 1px solid #ccc;
  border-radius: 3px;
  padding: 5px;
}
/* ... */

